# apiServer/controllers/default_controller.py
@@ -2,13 +2,20 @@ from controllers.classifier.load_classifier import load_classifier
 
 predict = load_classifier()
 
-def detect_get(parameters) -> str:
 
-    for p in parameters:
-        p['clickbaitiness'] = predict([p['text']])[0]
-        del p['text']
+def detect_post(parameters) -> str:
 
-    return parameters
+    texts = map(lambda x: x['text'], parameters)
+    res = zip(parameters, predict(texts))
 
-def summary_get(parameters) -> str:
+    def reconstruct(elem):
+        parameter, score = elem
+        return {
+            'id': parameter['id'],
+            'clickbaitiness': score
+        }
+
+    return list(map(reconstruct, res))
+
+def summary_post(parameters) -> str:
     return 'do some magic!'
